# FlatScrapping

./: .gitignore  convert.py  flat.py  main.py  pyproject.toml  test_main.py
utils/: selenium_utils.py  temp_file.py
