[tool.poetry]
name = "flatscrapping"
version = "0.1.0"
description = ""
authors = ["MrMarvel <seregakkk999@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
selenium = "^4.18.1"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
